--- a/src/assets/scss/_story-slider.scss
+++ b/src/assets/scss/_story-slider.scss
@@ -1,9 +1,10 @@
 .header {
-  position: absolute;
-  z-index: 100;
   left: 0;
+  position: absolute;
   right: 0;
   text-align: center;
+  z-index: 100;
+
   h1 {
     font-family: 'gotham-book', sans-serif;
     text-transform: uppercase;
@@ -12,6 +13,23 @@
     letter-spacing: -2px;
     font-size: 32px;
   }
+}
+
+.slick-prev {
+  left: 15px;
+  color: white;
+}
+
+.slick-next {
+  right: 15px;
+  color: white;
+}
+
+.slider-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 100px;
+  overflow: hidden;
 }
 
 .story-slider {
@@ -61,10 +79,21 @@
     .caption__title {
       padding-left: 20px;
       padding-top: 20px;
+
       span {
         display: block;
       }
+
+      .story-label {
+        opacity: 0;
+        animation-duration: 1.5s;
+        animation-delay: 550ms;
+      }
+
       .episode-number {
+        opacity: 0;
+        animation-duration: 1.5s;
+        animation-delay: 200ms;
         font-size: 36px;
       }
     }
@@ -81,6 +110,7 @@
         letter-spacing: 1.25px;
         font-weight: lighter;
         text-transform: uppercase;
+        animation-duration: 2s;
       }
 
       .content-description {
@@ -111,11 +141,14 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 200px;
+  // NOTE: height is set to 1 to workaround an issue with reinitializing slick slider using media breakpoints.
+  //       Should try and look for new solution if possible.
+  height: 1px;
   width: 100%;
   position: absolute;
-  padding: 0 10%;
+  padding: 0 5%;
   overflow: hidden;
+  visibility: hidden;
 
   div {
     height: inherit;
@@ -128,9 +161,47 @@
   height: inherit;
   background-color: #161616;
   cursor: pointer;
+
   figure {
     height: inherit;
     width: inherit;
+    position: relative;
+
+    .default-poster:before {
+      content: ' ';
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      opacity: 0.5;
+    }
+
+    .poster-title {
+      z-index: 2;
+      position: absolute;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+
+      h4 {
+        margin-bottom: 6px;
+        font-size: 20px;
+        letter-spacing: 2px;
+      }
+
+      h5 {
+        font-size: 14px;
+        letter-spacing: 2px;
+      }
+    }
+
     div {
       height: inherit;
       width: inherit;
@@ -147,12 +218,11 @@
 }
 
 #jamesBlake {
-  background-image: url('/media/images/slider_images/jamesblake_slider.jpg');
+  background-image: url("/media/images/slider_images/jamesblake_slider.jpg");
 }
 
 #jamesBlakeFig {
-
   .default-poster {
-    background-image: url('/media/images/default_thumbnails/jamesblake_thumb.jpg');
+    background-image: url("/media/images/default_thumbnails/jamesblake_thumb.jpg");
   }
 }
