--- a/src/assets/scss/life-on-tour.scss
+++ b/src/assets/scss/life-on-tour.scss
@@ -24,62 +24,44 @@
   font-style: normal;
 }
 
+@import './life-on-tour/reset';
 @import '../css/animsition.css';
 @import '~slick-carousel/slick/slick.css';
 @import '~slick-carousel/slick/slick-theme.css';
+@import '~aos/dist/aos.css';
+@import '~animate.css/animate.css';
 @import './themify-icons/themify-icons';
 @import './life-on-tour/variables';
 @import './life-on-tour/button';
 @import './life-on-tour/navbar';
 @import './life-on-tour/typography';
 
+html {
+  background-color: #000;
+}
+
 body,
 html {
   font-size: 14px;
   padding-top: 0;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   min-width: 320px;
-  background-color: #ffffff;
   font-family: "gotham-book",sans-serif;
   margin: 0;
 }
 
 .animsition {
-  background-color: #161616;
+  height: inherit;
 }
 
+*,
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: 'Bulmer', sans-serif;
-}
-
-p {
-  font-size: 18px;
-  line-height: 1.5;
-}
-
-h1 {
-  font-size: 42px;
-}
-
-a {
-  text-decoration: none;
-  color: #161616;
-  font-size: 14px;
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 button {
@@ -92,7 +74,7 @@ button {
 
 .divider {
   width: 100%;
-  height: 3px;
+  height: 2px;
   background-color: #ffffff;
   display: inherit;
   margin: 16px 0 28px;
@@ -193,3 +175,5 @@ a.btn:hover {
 }
 
 @import './responsive/responsive-story-slider';
+@import './responsive/responsive-landingpage-body';
+@import './responsive/responsive-landingpage-footer';
