--- a/src/assets/scss/life-on-tour/_typography.scss
+++ b/src/assets/scss/life-on-tour/_typography.scss
@@ -1,11 +1,21 @@
+* {
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+html,
+body {
+  font-size: 13px;
+  font-family: 'gotham-book', sans-serif;
+}
+
 h1,
 h2,
 h3,
 h4,
-h5,
-h6,
-p {
-  margin: 0;
+h5 {
+  font-family: 'Bulmer', sans-serif;
 }
 
 p {
@@ -14,4 +24,39 @@ p {
 
 span, p {
   letter-spacing: .25px;
+}
+
+a {
+  outline: none;
+  text-decoration: none;
+  color: #161616;
+  font-size: 13px;
+}
+
+h1 {
+  font-size: 2.55em;
+}
+
+h2 {
+  font-size: 2.25em;
+}
+
+h3 {
+  font-size: 1.8em;
+}
+
+h4 {
+  font-size: 1.6em;
+}
+
+h5 {
+  font-size: 1.4em;
+}
+
+h6 {
+  font-size: 1.2em;
+}
+
+b {
+  font-weight: bold;
 }
