--- a/src/assets/scss/responsive/_responsive-story-slider.scss
+++ b/src/assets/scss/responsive/_responsive-story-slider.scss
@@ -1,23 +1,34 @@
 @import '../story-slider';
 
-@media only screen and (min-width: 576px) {
-
+@media screen and (min-width: 576px) {
+  .story-slider {
+    height: calc(100vh - 100px);
+  }
+  .thumbnail-slider {
+    visibility: visible;
+    height: 240px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
+  .slider-container {
+    padding-bottom: 100px;
+  }
 
-}
+  .story-slider {
+    height: calc(100vh - 200px);
+  }
 
-@media only screen and (min-width: 992px) {
-
-}
-
-@media only screen and (min-width: 1200px) {
+  .divider {
+    margin-top: 6px;
+  }
   .slide {
+
+    height: 100%;
 
     .caption {
       span {
-        font-size: 32px;
+        font-size: 26px;
         letter-spacing: 2px;
       }
 
@@ -25,28 +36,42 @@
         padding-left: 32px;
         padding-top: 32px;
         .episode-number {
-          font-size: 44px;
+          font-size: 38px;
         }
       }
 
       .caption__content {
         padding: 0 32px;
+        top: 140px;
 
         .content-title {
-          font-size: 64px;
-          letter-spacing: 2px;
-          font-weight: lighter;
-          text-transform: uppercase;
+          font-size: 58px;
         }
 
-        .content-description {
-          display: inline-block;
-          font-size: 18px;
+        .content-body {
+          display: flex;
+          flex-direction: row;
+          align-items: stretch;
+
+          .content-link {
+            flex: 0 0 200px;
+            margin-right: 18px;
+          }
+
+          .content-description {
+            display: block;
+            font-size: 14px;
+            flex: 0 0 500px;
+            p {
+              font-size: inherit;
+            }
+          }
         }
 
         .story-link {
-          font-size: 20px;
-          padding-top: 12px;
+          font-size: 14px;
+          float: right;
+          padding-top: 0;
 
           i {
             position: relative;
@@ -58,19 +83,13 @@
   }
 
   .thumbnail-slider {
-    top: auto;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 200px;
-    width: 100%;
-    position: absolute;
-    padding: 0 10%;
-    overflow: hidden;
-
-    div {
-      height: inherit;
-      width: inherit;
+    .slick-list {
+      .slick-track {
+        width: auto;
+        .slick-slide {
+          margin: 0 2px;
+        }
+      }
     }
   }
 
@@ -107,5 +126,4 @@
       background-image: url('/media/images/default_thumbnails/jamesblake_thumb.jpg');
     }
   }
-
 }
