added dep: plyr.js, created: james_blake feature page

--- a/src/assets/scss/life-on-tour.scss
+++ b/src/assets/scss/life-on-tour.scss
@@ -30,6 +30,7 @@
 @import '~slick-carousel/slick/slick-theme.css';
 @import '~aos/dist/aos.css';
 @import '~animate.css/animate.css';
+@import '~plyr/src/scss/plyr';
 @import './themify-icons/themify-icons';
 @import './life-on-tour/variables';
 @import './life-on-tour/button';
