--- a/src/assets/scss/life-on-tour/_typography.scss
+++ b/src/assets/scss/life-on-tour/_typography.scss
@@ -60,3 +60,15 @@ h6 {
 b {
   font-weight: bold;
 }
+
+.subtitle {
+  font-size: 32px;
+  letter-spacing: 0.025em;
+  margin-bottom: 10px;
+  color: #be1f2d;
+}
+
+.title {
+  font-size: 52px;
+  letter-spacing: 0.035em;
+}
